Phone Goggles: Avoid sending unintentional professional SMS in the middle of the night
Comments about this feature are available here:
   http://review.cyanogenmod.com/125

Change-Id: Id063e78b526f4d74a8c21039a161b27ae3a5ddc1

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -797,5 +797,14 @@
     <string name="pref_title_mms_message_font_size">Message font size</string>
     <string name="pref_summary_mms_message_font_size">Change font size of message view</string>
     <string name="pref_dialogtitle_mms_message_font_size">Select font size</string>
+
+    <!-- Phone goggles -->
+    <string name="toast_phone_goggles">You are not allowed to send SMS at this time. Please try again later.</string>
+    <string name="dialog_phone_goggles_title">SMS blocked</string>
+    <string name="dialog_phone_goggles_title_unlocked">SMS authorized</string>
+    <string name="dialog_phone_goggles_content">Sending a SMS may not be wise at this time. Are you sure you want to continue?</string>
+    <string name="dialog_phone_goggles_unauthorized">Sending a SMS may not be wise at this time.</string>
+    <string name="dialog_phone_goggles_ok">Send</string>
+    <string name="dialog_phone_goggles_cancel">Save draft</string>
 </resources>
 
