--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -359,4 +359,13 @@
     <string name="pref_title_mms_message_font_size">Taille de la police</string>
     <string name="pref_summary_mms_message_font_size">Changer la taille de la police utilisée pour afficher les messages</string>
     <string name="pref_dialogtitle_mms_message_font_size">Choisir la taille de la police</string>
+
+    <!-- Phone goggles -->
+    <string name="toast_phone_goggles">Vous n\'êtes pas autorisé a envoyer des SMS pour le moment. Veuillez réitérer votre demande plus tard.</string>
+    <string name="dialog_phone_goggles_title">Appel bloqué</string>
+    <string name="dialog_phone_goggles_title_unlocked">Appel autorisé</string>
+    <string name="dialog_phone_goggles_content">Envoyer un SMS n\'est pas recommandé pour le moment. Etes vous sûr de vouloir continuer ?</string>
+    <string name="dialog_phone_goggles_unauthorized">Envoyer un SMS n\'est pas recommandé pour le moment.</string>
+    <string name="dialog_phone_goggles_ok">Envoyer</string>
+    <string name="dialog_phone_goggles_cancel">Enregistrer</string>
 </resources>
