--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -766,8 +766,30 @@
     <!-- Extra Settings: -->
     <string name="pref_extra_settings">Extra settings</string>
 
+    <!-- Setting item for folder to save MMS Attachments to -->
+    <string name="pref_title_save_location">Attachment save folder</string>
+
+    <!-- Back to all threads -->
+    <string name="pref_title_mms_back_to_all_threads">Back to all threads</string>
+    <string name="pref_summary_mms_back_to_all_threads">Always go to all-threads when back button is pressed</string>
+
     <!-- Toggle setting for enable/disable Black Background -->
     <string name="pref_title_mms_black_background">Black Background</string>
     <string name="pref_summary_mms_black_background">Enable/disable black background\n(Restart Mms)</string>
+
+    <!-- Full timestamps -->
+    <string name="pref_title_mms_full_timestamp">Full timestamps</string>
+    <string name="pref_summary_mms_full_timestamp">Enable to show both date and time in message timestamps</string>
+
+    <!-- Only mobile numbers -->
+    <string name="pref_title_only_mobile_numbers">Only mobile numbers</string>
+    <string name="pref_summary_only_mobile_numbers">Enable to only show mobile numbers in recipient field</string>
+
+    <!-- Custom user-agent -->
+    <string name="pref_mms_custom_option">Custom..</string>
+    <string name="pref_key_mms_user_agent_default">Android-Mms/2.0</string>
+    <string name="pref_title_mms_user_agent">Custom User-Agent</string>
+    <string name="pref_summary_mms_user_agent">Spoof phone as a different model for MMS</string>
+    <string name="pref_mms_user_agent_custom_set">Custom User Agent set to:\n</string>
 </resources>
 
