--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -776,5 +776,12 @@
 
     <!-- Setting item for folder to save MMS Attachments to -->
     <string name="pref_title_save_location">Attachment save folder</string>
+
+    <!-- Custom user-agent -->
+    <string name="pref_mms_custom_option">Custom..</string>
+    <string name="pref_key_mms_user_agent_default">Android-Mms/2.0</string>
+    <string name="pref_title_mms_user_agent">Custom User-Agent</string>
+    <string name="pref_summary_mms_user_agent">Spoof phone as a different model for MMS</string>
+    <string name="pref_mms_user_agent_custom_set">Custom User Agent set to:\n</string>
 </resources>
 
