--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -783,5 +783,13 @@
     <string name="template_cancel_confirm_text">Would you like to cancel?</string>
     <string name="gestures_already_present">Warning: A similar gesture is associated to another template!</string>
 
-</resources>
+    <!-- Extra Settings: -->
+    <string name="pref_extra_settings">Extra settings</string>
 
+    <!-- Full timestamps -->
+    <string name="pref_title_mms_full_timestamp">Full timestamps</string>
+    <string name="pref_summary_mms_full_timestamp">Display both date and time in timestamps</string>
+    <!-- Which timestamps -->
+    <string name="pref_title_mms_use_sent_timestamp">Original timestamps</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Display sent date instead of received date in timestamps</string>
+</resources>
