--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -804,5 +804,34 @@
     <string name="pref_title_mms_message_font_size">Message font size</string>
     <string name="pref_summary_mms_message_font_size">Change font size of message view</string>
     <string name="pref_dialogtitle_mms_message_font_size">Select font size</string>
+
+    <!-- Change LED color/blink rate for message notification -->
+    <string name="pref_title_mms_notification_led_settings">LED settings</string>
+    <string name="pref_title_mms_notification_led">Blink LED</string>
+    <string name="pref_summary_mms_notification_led">Blink LED when message received</string>
+    <string name="pref_title_mms_notification_led_color">LED color</string>
+    <string name="pref_summary_mms_notification_led_color">Change LED color</string>
+    <string name="pref_dialogtitle_mms_notification_led_color">Select your LED color</string>
+    <string name="pref_mms_notification_led_color_green">Green/Default</string>
+    <string name="pref_mms_notification_led_color_white">White</string>
+    <string name="pref_mms_notification_led_color_red">Red</string>
+    <string name="pref_mms_notification_led_color_blue">Blue</string>
+    <string name="pref_mms_notification_led_color_yellow">Yellow</string>
+    <string name="pref_mms_notification_led_color_cyan">Cyan</string>
+    <string name="pref_mms_notification_led_color_magenta">Magenta</string>
+    <string name="pref_mms_notification_led_color_pink">Pink</string>
+    <string name="pref_mms_notification_led_color_orange">Orange</string>
+    <string name="pref_mms_notification_led_color_light_blue">Light Blue</string>
+    <string name="pref_title_mms_notification_led_blink_rate">LED blink rate</string>
+    <string name="pref_summary_mms_notification_led_blink_rate">Change LED blink rate</string>
+    <string name="pref_dialogtitle_mms_notification_led_blink_rate">Select your LED blink rate</string>
+
+    <!-- Change Vibrate pattern/method for message notification -->
+    <string name="pref_title_mms_notification_vibrate_settings">Vibrate settings</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Vibrate pattern</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Change vibrate pattern</string>
+    <string name="pref_title_mms_notification_vibrate_call">Vibrate on Call</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Allow vibrate while on a call</string>
+
 </resources>
 
