Added ability to toggle enable/disable Send on Enter
Change-Id: Ic7cee9e5babc42d5c00ac50f7a490369b3a3d936

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -804,5 +804,10 @@
     <string name="pref_title_mms_message_font_size">Message font size</string>
     <string name="pref_summary_mms_message_font_size">Change font size of message view</string>
     <string name="pref_dialogtitle_mms_message_font_size">Select font size</string>
+
+    <!-- Send on enter -->
+    <string name="pref_title_mms_send_on_enter">Send on Enter</string>
+    <string name="pref_summary_mms_send_on_enter">Enable/disable send message when Enter key pressed</string>
+
 </resources>
 
