--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -345,21 +345,21 @@
 
     <!-- Toggle setting for enable/disable Black Background -->
     <string name="pref_title_mms_black_background">Czarne tło</string>
-    <string name="pref_summary_mms_black_background">Włącz/wyłącz czarne tło\n(Włącz i wyłącz po zmianie)</string>
+    <string name="pref_summary_mms_black_background">Włącz/wyłącz czarne tło\n(Zrestartuj aplikację po zmianie)</string>
 
     <!-- Custom user-agent -->
-    <string name="pref_mms_custom_option">Własny..</string>
+    <string name="pref_mms_custom_option">Własny...</string>
     <string name="pref_title_mms_user_agent">User-Agent</string>
-    <string name="pref_summary_mms_user_agent">Udawaj inny telefon dla MMS</string>
+    <string name="pref_summary_mms_user_agent">Udawaj inny telefon, przy wiadomościach MMS</string>
     <string name="pref_mms_user_agent_custom_set">User Agent ustawiony na:\n</string>
 
     <!-- Full timestamps -->
     <string name="pref_title_mms_full_timestamp">Pełna data</string>
-    <string name="pref_summary_mms_full_timestamp">Pokazuj datę i czas wiadomości</string>
+    <string name="pref_summary_mms_full_timestamp">Pokazuj pełną datę i czas wiadomości</string>
 
     <!-- Which timestamps -->
     <string name="pref_title_mms_use_sent_timestamp">Użyj oryginalnej daty</string>
-    <string name="pref_summary_mms_use_sent_timestamp">Pokaż i przechowuj datę wysłanie, a nie odbioru</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Pokaż i przechowuj datę wysłania, a nie odbioru</string>
 
     <!-- Only mobile numbers -->
     <string name="pref_title_only_mobile_numbers">Tylko numery komórkowe</string>
@@ -384,7 +384,7 @@
     <string name="pref_text_mms_notification_vibrate_custom">Format: wyłączony/włączony w milisekundach: wył, wł, wył, wł, ...</string>
 
     <!-- Send on enter -->
-    <string name="pref_title_mms_send_on_enter">Wyślij na enter</string>
+    <string name="pref_title_mms_send_on_enter">Wyślij enterem</string>
     <string name="pref_summary_mms_send_on_enter">Wyślij wiadomość, gdy wciśnięty zostanie przycisk enter</string>
 
 </resources>
