--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -167,6 +167,10 @@
     <string name="pref_summary_mms_delivery_reports" msgid="4874657984217756112">"בקש דוח מסירה לכל הודעה שתשלח"</string>
     <string name="pref_summary_mms_read_reports" msgid="2748323864008907440">"בקש דוח קריאה לכל הודעה שתשלח"</string>
     <string name="pref_summary_sms_delivery_reports" msgid="5852207702358546129">"בקש דוח מסירה לכל הודעה שתשלח"</string>
+	<string name="pref_title_sms_split_160">פיצול SMS</string>
+    <string name="pref_summary_sms_split_160">פצל הודעות כל 160 תווים</string>
+    <string name="pref_title_sms_split_counter">מונה פיצול</string>
+    <string name="pref_summary_sms_split_counter">להוספת הודעה לדוגמה מונה (1/2)</string>
     <string name="pref_summary_auto_delete" msgid="7719538116486177613">"מחק הודעות ישנות עם הגעה למגבלה"</string>
     <string name="pref_summary_delete_limit" msgid="597128041393045216">"<xliff:g id="COUNT">%1$s</xliff:g> הודעות בכל שיחה"</string>
     <string name="pref_title_manage_sim_messages" msgid="7820895261757881177">"נהל הודעות בכרטיס SIM"</string>
@@ -187,11 +191,20 @@
     <item msgid="6069709696037750627">"רק במצב שקט"</item>
     <item msgid="7486145357487111435">"אף פעם"</item>
   </string-array>
+    <string name="prefDefault_vibrateWhen">לעולם לא</string>
+    <string name="prefDefault_vibrate_true">תמיד</string>
+    <string name="prefDefault_vibrate_false">לעולם לא</string>
+  <string-array name="prefValues_vibrateWhen">
+    <item>תמיד</item>
+    <item>שקט</item>
+    <item>אף־פעם</item>
+  </string-array>
     <string name="prefDialogTitle_vibrateWhen" msgid="6419655771690242118">"רטט"</string>
     <string name="pref_title_mms_auto_retrieval" msgid="4021878285474431355">"אחזור אוטומטי"</string>
     <string name="pref_summary_mms_auto_retrieval" msgid="925163257363757048">"אחזר הודעות באופן אוטומטי"</string>
     <string name="pref_title_mms_retrieval_during_roaming" msgid="6016227402731817804">"אחזור אוטומטי בנדידה"</string>
     <string name="pref_summary_mms_retrieval_during_roaming" msgid="2427892806582531020">"אחזר הודעות באופן אוטומטי בעת נדידה"</string>
+    <string name="pref_title_save_location">תיקית השמירה לקבצים מצורפים</string>
     <string name="to_label" msgid="2355268818058389047">"אל "</string>
     <string name="confirm_dialog_title" msgid="5810813994465120375">"מחק"</string>
     <string name="confirm_dialog_locked_title" msgid="8179085718150932242">"למחוק הודעה נעולה?"</string>
@@ -253,6 +266,7 @@
     <string name="attach_sound" msgid="3149325985970669609">"אודיו"</string>
     <string name="attach_record_sound" msgid="6011431304469858929">"הקלט אודיו"</string>
     <string name="attach_slideshow" msgid="3497422151091037063">"הצגת שקופיות"</string>
+    <string name="attach_contact_info">פרטי אנשי קשר</string>
     <string name="select_bottom_text" msgid="4201966447623311931">"טקסט בתחתית"</string>
     <string name="select_top_text" msgid="6734183477539197815">"טקסט למעלה"</string>
     <string name="delivery_toast_body" msgid="4478305651728684364">"הודעה התקבלה על ידי %s"</string>
