--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -500,6 +500,8 @@
    <string name="retrying_dialog_body">This message <xliff:g id="message">%s</xliff:g> was not sent due to a connection problem.\r\nRetrying to send\u2026</string>
    <!-- Menu title for locking a message -->
    <string name="menu_lock">Lock message</string>
+   <!-- Menu title for resending a message -->
+   <string name="menu_resend">Resend message</string>
    <!-- Menu title for unlocking a message -->
    <string name="menu_unlock">Unlock message</string>
 
