--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -94,7 +94,7 @@
     <string name="download">Download</string>
     <!-- Message displayed in place of the "download message" button once it has been pressed,
          indicating that the download is in progress -->
-    <string name="downloading">Downloading</string>
+    <string name="downloading">Downloading\u2026</string>
     <!-- Formatting for prepending MMS message text with sender's name. -->
     <string name="name_colon"><b><xliff:g id="name" example="Me">%s</xliff:g></b>": "</string>
     <!-- Formatting for subject displayed inline, prepended to MMS message text -->
