--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_call_back" msgid="7538482331117914146">"<xliff:g id="NAME">%s</xliff:g> anrufen"</string>
     <string name="menu_send_email" msgid="671366308915241664">"E-Mail an <xliff:g id="NAME">%s</xliff:g> senden"</string>
     <string name="menu_compose_new" msgid="3763437973691046238">"Schreiben"</string>
+    <string name="menu_mark_all_read">Alle gelesen</string>
     <string name="menu_preferences" msgid="4693148116114749414">"Einstellungen"</string>
     <string name="menu_add_address_to_contacts" msgid="2313624913486309940">"<xliff:g id="NAME">%s</xliff:g> zu Kontakten hinzufügen"</string>
     <string name="menu_call" msgid="5877123227307074690">"Anrufen"</string>
