--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -745,6 +745,8 @@
         <!-- Case of 0 or 2 or more results. -->
         <item quantity="other"><xliff:g id="number" example="15">%1$s</xliff:g> people</item>
     </plurals>
-
+   <!-- SMS Sent Time -->
+       <string name="pref_summary_sms_sent_time_summary">Check the box to report the time that the sms was sent, if unchecked the time will be when it was recieved</string>
+       <string name="pref_title_sms_sent_time_title">Sent/Recieved Time</string>
 </resources>
 
