--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -748,5 +748,15 @@
    <!-- SMS Sent Time -->
        <string name="pref_summary_sms_sent_time_summary">Check the box to report the time that the sms was sent, if unchecked the time will be when it was recieved</string>
        <string name="pref_title_sms_sent_time_title">Sent/Recieved Time</string>
+
+<!-- Change Vibrate pattern/method for message notification -->
+    <string name="pref_title_mms_notification_vibrate_settings">Vibrate settings</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Vibrate pattern</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Change vibrate pattern</string>
+    <string name="pref_title_mms_notification_vibrate_call">Vibrate on Call</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Allow vibrate while on a call</string>
+    <string name="pref_title_mms_notification_vibrate_custom">Custom vibrate pattern</string>
+    <string name="pref_text_mms_notification_vibrate_custom">Format off/on in milliseconds: off, on, off, on, ...</string>
+
 </resources>
 
