--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -355,6 +355,14 @@
     <!-- Toggle setting for always show character counter -->
     <string name="pref_title_show_counter_always">Always display counter</string>
     <string name="pref_summary_show_counter_always">Always display the character counter when composing messages</string>
+    <!-- Settings item for SMS Split 160 characters setting -->
+    <string name="pref_title_sms_split_160">SMS split</string>
+    <!-- Settings item description for boolean SMS Split 160 characters setting -->
+    <string name="pref_summary_sms_split_160">Split messages every 160 characters</string>
+    <!-- Settings item for boolean option for SMS Split Counter -->
+    <string name="pref_title_sms_split_counter">Split counter</string>
+    <!-- Settings item description for boolean SMS Split 160 characters setting -->
+    <string name="pref_summary_sms_split_counter">Adds counter to message ex. (1/2)</string>
 
     <!-- The vibrate notification modes -->
     <string-array name="prefEntries_vibrateWhen">
