--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -394,11 +394,11 @@
     <string name="pref_summary_templates_manage">Gérer vos modèles de SMS</string>
     <string name="pref_title_templates_show_gesture">Geste</string>
     <string name="pref_summary_templates_show_gesture">Montrer la trace du geste</string>
-    <string name="pref_title_template_gestures_sensitivity">Sensiblité geste</string>
+    <string name="pref_title_template_gestures_sensitivity">Sensibilité gestes</string>
     <string name="template_save">Sauvegarder</string>
-    <string name="template_insert_hint">Insérez ici le modèle de texte</string>
+    <string name="template_insert_hint">Insérez ici le texte du modèle</string>
     <string name="template_empty_text">Le champ de texte ne peut pas être vide</string>
-    <string name="template_explanation">Insérez ou modifiez le modèle de texte et optionnellement dessinez un geste à lui associer</string>
+    <string name="template_explanation">Insérez ou modifiez le texte du modèle et optionnellement dessinez un geste à lui associer</string>
     <string name="template_edit">Modifier</string>
     <string name="template_delete">Supprimer</string>
     <string name="template_ctx_menu_title">Actions</string>
