--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -787,8 +787,8 @@
     <string name="pref_title_strip_unicode">Strip unicode</string>
     <string name="pref_summary_strip_unicode">Substitute common characters that are not supported in 160 character SMS messages</string>
     <!-- Enable emojis -->
-    <string name="pref_title_enable_emojis">Enable emojis</string>
-    <string name="pref_summary_enable_emojis">Enable support for softbank unicode emojis, a set of 471 nice emoticons</string>
+    <string name="pref_title_enable_emojis">Emoji support</string>
+    <string name="pref_summary_enable_emojis">Enable support for unicode emojis, a set of 471 nice emoticons</string>
     <!-- Full timestamps -->
     <string name="pref_title_mms_full_timestamp">Full timestamps</string>
     <string name="pref_summary_mms_full_timestamp">Display both date and time in timestamps</string>
