--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -780,7 +780,7 @@
     <string name="template_not_present_error_title">Error</string>
     <string name="template_select">Select a template</string>
     <string name="template_cancel_confirm_title">Warning</string>
-    <string name="template_cancel_confirm_text">Would you like to cancel?</string>
+    <string name="template_cancel_confirm_text">The template will be deleted. Continue?</string>
     <string name="gestures_already_present">Warning: A similar gesture is associated to another template!</string>
 
     <!-- Extra Settings: -->
